styles/recipe.css
body{
    background-color: antiquewhite;
}

.title {
    margin-top: 100px;

    font-size: 70px;
    text-align: center;
    font-family: sans-serif, monospace;
}

img{
    display: block;
    margin: auto;
}

.description,
.ingredients,
.steps {
    margin: 40px 30px;
    background-color: white;
    border: 2px solid black;
    padding: 30px;
}

h2{
    font-size: 30px;
    text-align: center;
    font-family: 'Courier New', Courier, monospace;
}

li,
.description p{
    font-size: 30px;
    margin: 0;
}

